fix: bug 配置了一下路由, dev-server里面设置了一下代理,以/api开头的代理到另外一个端口 去拿数据

--- a/app/myApp/index.html
+++ b/app/myApp/index.html
@@ -6,8 +6,6 @@
     <title>首页</title>
 </head>
 <body>
-<div>index首页</div>
-<!-- vue的组件以自定义标签的形式使用index -->
-<favlist></favlist>
+<div id="app"></div>
 </body>
 </html>
